refactor: improve code formatting and structure across multiple components
- Updated test files to ensure consistent formatting in `header.spec.ts`, `input-text.spec.ts`, `ui-card.spec.ts`, and `budget-page.spec.ts`.
- Refactored `header.ts`, `input-text.ts`, `nav-item.ts`, and `ui-card.ts` for better readability and consistency.
- Enhanced HTML structure in `input-text.html`, `nav-item.html`, `ui-card.html`, and `budget-page.html` for improved clarity.
- Cleaned up CSS files and ensured proper formatting in `login-page.css` and `register.css`.
- Added ESLint and Prettier configuration files for better code quality and consistency.
- Updated `index.html` and `main.ts` for improved formatting and structure.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,8 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
+    "lint": "eslint --ext .ts,.html src/ --max-warnings=0",
+    "format": "prettier --write \"src/**/*.{ts,html,css,json,md}\"",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
@@ -42,6 +44,11 @@
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
+  "eslint": "^8.48.0",
+  "@typescript-eslint/parser": "^6.6.0",
+  "@typescript-eslint/eslint-plugin": "^6.6.0",
+  "eslint-config-prettier": "^8.8.0",
+  "prettier": "^2.8.8",
     "@angular/build": "^20.3.5",
     "@angular/cli": "^20.3.5",
     "@angular/compiler-cli": "^20.3.0",
