refactor: update formatting and structure in HTML templates and configuration files

--- a/frontend/.prettierrc
+++ b/frontend/.prettierrc
@@ -1,8 +1,10 @@
 {
-  "printWidth": 250,
+  "printWidth": 500,
   "singleQuote": true,
   "trailingComma": "es5",
   "tabWidth": 2,
+  "bracketSameLine": true,
+  "htmlWhitespaceSensitivity": "ignore",
   "overrides": [
     {
       "files": "*.html",
