--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,8 @@
     "ng": "ng",
     "start": "ng serve",
     "lint": "eslint --ext .ts,.html src/ --max-warnings=0",
-    "format": "prettier --write \"src/**/*.{ts,html,css,json,md}\"",
+  "format": "prettier --write \"src/**/*.{ts,html,css,json,md}\"",
+  "format:html": "prettier --write \"src/**/*.html\" && node tools/collapse-html-openings.js",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
