chore: update Angular dependencies and devDependencies to latest versions
- Updated @angular/common, @angular/compiler, @angular/core, @angular/forms, @angular/platform-browser, and @angular/router to version 20.3.6.
- Updated devDependencies: eslint to 9.37.0, @typescript-eslint/parser and @typescript-eslint/eslint-plugin to 8.46.1, eslint-config-prettier to 10.1.8, prettier to 3.6.2, @angular/build, @angular/cli, and @angular/compiler-cli to 20.3.6.
- Updated @types/jasmine to ~5.1.11 and jasmine-core to ~5.12.0, and karma to ~6.4.4.
- Added overrides for glob and rimraf.

style: enhance budget-category-group component styling

- Made label text bold and changed its color to gray-800 for better visibility.
- Updated the styling of assigned and paid currency displays to be bold for consistency.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,13 +25,13 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/cdk": "^20.2.9",
-    "@angular/common": "^20.3.0",
-    "@angular/compiler": "^20.3.0",
-    "@angular/core": "^20.3.0",
-    "@angular/forms": "^20.3.0",
-    "@angular/platform-browser": "^20.3.0",
-    "@angular/router": "^20.3.0",
+  "@angular/cdk": "^20.2.9",
+  "@angular/common": "^20.3.6",
+  "@angular/compiler": "^20.3.6",
+  "@angular/core": "^20.3.6",
+  "@angular/forms": "^20.3.6",
+  "@angular/platform-browser": "^20.3.6",
+  "@angular/router": "^20.3.6",
     "@fortawesome/angular-fontawesome": "^3.0.0",
     "@fortawesome/fontawesome-free": "^7.1.0",
     "@fortawesome/fontawesome-svg-core": "^7.1.0",
@@ -45,21 +45,28 @@
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-  "eslint": "^8.48.0",
-  "@typescript-eslint/parser": "^6.6.0",
-  "@typescript-eslint/eslint-plugin": "^6.6.0",
-  "eslint-config-prettier": "^8.8.0",
-  "prettier": "^2.8.8",
-    "@angular/build": "^20.3.5",
-    "@angular/cli": "^20.3.5",
-    "@angular/compiler-cli": "^20.3.0",
-    "@types/jasmine": "~5.1.0",
-    "jasmine-core": "~5.9.0",
-    "karma": "~6.4.0",
+  "eslint": "^9.37.0",
+  "@typescript-eslint/parser": "^8.46.1",
+  "@typescript-eslint/eslint-plugin": "^8.46.1",
+  "eslint-config-prettier": "^10.1.8",
+  "prettier": "^3.6.2",
+  "rimraf": "^4.0.1",
+  "glob": "^9.3.5",
+    "@angular/build": "^20.3.6",
+    "@angular/cli": "^20.3.6",
+    "@angular/compiler-cli": "^20.3.6",
+    "@types/jasmine": "~5.1.11",
+    "jasmine-core": "~5.12.0",
+    "karma": "~6.4.4",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "typescript": "~5.9.2"
+  }
+  ,
+  "overrides": {
+    "glob": "^9.3.5",
+    "rimraf": "^4.0.1"
   }
 }
