--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,6 +37,7 @@
     "@fortawesome/fontawesome-svg-core": "^7.1.0",
     "@fortawesome/free-brands-svg-icons": "^7.1.0",
     "@fortawesome/free-solid-svg-icons": "^7.1.0",
+    "@ng-select/ng-select": "^20.5.0",
     "@tailwindcss/postcss": "^4.1.14",
     "postcss": "^8.5.6",
     "rxjs": "~7.8.0",
