--- a/backend/package.json
+++ b/backend/package.json
@@ -2,16 +2,17 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "Personal budgeting API built with NestJS, Fastify, and Prisma",
-  "main": "dist/main.js",
+  "main": "dist/src/main.js",
   "scripts": {
     "build": "tsc -p tsconfig.build.json",
-    "start": "node dist/main.js",
+    "start": "node dist/src/main.js",
     "start:dev": "ts-node-dev --respawn --transpile-only --ignore-watch node_modules src/main.ts",
     "start:debug": "node --inspect-brk -r ts-node/register -r tsconfig-paths/register src/main.ts",
     "lint": "echo \"No lint configured\"",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate deploy",
     "prisma:migrate:dev": "prisma migrate dev",
+    "prisma:init": "npm run prisma:generate && npm run prisma:migrate",
     "prisma:seed": "ts-node --project tsconfig.json prisma/seed.ts"
   },
   "keywords": [],
@@ -25,20 +26,26 @@
     "@nestjs/common": "^10.4.20",
     "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.4.20",
+    "@nestjs/jwt": "^10.0.0",
+    "@nestjs/passport": "^10.0.0",
     "@nestjs/mapped-types": "^2.1.0",
     "@nestjs/platform-fastify": "^10.4.20",
     "@nestjs/swagger": "^7.4.2",
-    "@prisma/client": "^5.22.0",
+    "@prisma/client": "^6.18.0",
+    "argon2": "^0.41.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "fastify": "^4.29.1",
     "joi": "^17.13.3",
-    "prisma": "^5.22.0",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "rxjs": "^7.8.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.4.9",
     "@types/node": "^20.19.24",
+    "@types/passport-jwt": "^4.0.1",
+    "prisma": "^6.18.0",
     "rimraf": "^5.0.10",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
