--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate deploy",
     "prisma:migrate:dev": "prisma migrate dev",
+    "prisma:create-init":"prisma migrate dev --name init",
     "prisma:init": "npm run prisma:generate && npm run prisma:migrate",
     "prisma:seed": "ts-node --project tsconfig.json prisma/seed.ts"
   },
