feat: enhance budget calculation logic and add comprehensive tests
- Updated the budget-page component to check if data is already loaded before fetching new data.
- Created a detailed budget rules document outlining automatic budget calculations for BudgetMonth and BudgetCategory.
- Implemented extensive unit tests for budget calculations, covering scenarios such as carryover from previous months, spending within budget, and refund updates.
- Developed a mock Prisma client to facilitate testing of budget-related functionalities.
- Added a TypeScript configuration for testing to ensure proper compilation and type checking.

--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,8 @@
     "prisma:migrate:dev": "prisma migrate dev",
     "prisma:create-init":"prisma migrate reset && prisma migrate dev --name init",
     "prisma:init": "npm run prisma:generate && npm run prisma:migrate",
-    "prisma:seed": "ts-node --project tsconfig.json prisma/seed.ts"
+    "prisma:seed": "ts-node --project tsconfig.json prisma/seed.ts",
+    "test": "ts-node --project tsconfig.test.json test/budget-calculation.spec.ts"
   },
   "keywords": [],
   "author": "",
