--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,7 @@
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate deploy",
     "prisma:migrate:dev": "prisma migrate dev",
-    "prisma:create-init":"prisma migrate reset && prisma migrate dev --name init",
+    "prisma:create-init": "prisma migrate reset && prisma migrate dev --name init",
     "prisma:init": "npm run prisma:generate && npm run prisma:migrate",
     "prisma:seed": "ts-node --project tsconfig.json prisma/seed.ts",
     "test": "ts-node --project tsconfig.test.json test/budget-calculation.spec.ts"
@@ -23,14 +23,15 @@
   "dependencies": {
     "@fastify/cors": "^9.0.1",
     "@fastify/helmet": "^11.1.1",
+    "@fastify/static": "^7.0.4",
     "@fastify/swagger": "^8.15.0",
     "@fastify/swagger-ui": "^1.10.2",
     "@nestjs/common": "^10.4.20",
     "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.4.20",
     "@nestjs/jwt": "^10.0.0",
-    "@nestjs/passport": "^10.0.0",
     "@nestjs/mapped-types": "^2.1.0",
+    "@nestjs/passport": "^10.0.0",
     "@nestjs/platform-fastify": "^10.4.20",
     "@nestjs/swagger": "^7.4.2",
     "@prisma/client": "^6.18.0",
