chore: migrate testing framework from Jasmine to Jest
- Updated package.json to replace Angular testing commands with Jest commands.
- Updated Angular dependencies to the latest versions.
- Refactored test files to use Jest mocks instead of Jasmine spies.
- Added Jest configuration files and setup for Angular testing.
- Updated various component tests to use Jest's mocking capabilities.
- Introduced new test setup file for configuring Angular testing environment with Jest.
- Added ESLint configuration for backend to support TypeScript and Jest.

--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,7 @@
     "start": "node dist/src/main.js",
     "start:dev": "ts-node-dev --respawn --transpile-only --ignore-watch node_modules src/main.ts",
     "start:debug": "node --inspect-brk -r ts-node/register -r tsconfig-paths/register src/main.ts",
-    "lint": "echo \"No lint configured\"",
+    "lint": "eslint \"src/**/*.ts\" \"test/**/*.ts\"",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate deploy",
     "prisma:migrate:dev": "prisma migrate dev",
@@ -48,8 +48,12 @@
     "@nestjs/cli": "^10.4.9",
     "@types/node": "^20.19.24",
     "@types/passport-jwt": "^4.0.1",
+    "@typescript-eslint/eslint-plugin": "^8.46.1",
+    "@typescript-eslint/parser": "^8.46.1",
     "prisma": "^6.18.0",
     "rimraf": "^5.0.10",
+    "eslint": "^9.37.0",
+    "eslint-config-prettier": "^10.1.8",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.2.0",
