--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,8 @@
   "format:html": "prettier --write \"src/**/*.html\" && node tools/collapse-html-openings.js",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test --watch=false --browsers=ChromeHeadless"
+    "test": "jest --runInBand",
+    "test:watch": "jest --watch"
   },
   "prettier": {
     "printWidth": 100,
@@ -26,13 +27,14 @@
   "private": true,
   "dependencies": {
   "@angular/cdk": "^20.2.9",
-  "@angular/common": "^20.3.6",
-  "@angular/compiler": "^20.3.6",
-  "@angular/core": "^20.3.6",
-  "@angular/forms": "^20.3.6",
-  "@angular/platform-browser": "^20.3.6",
-  "@angular/animations": "20.3.6",
-  "@angular/router": "^20.3.6",
+  "@angular/common": "^20.3.9",
+  "@angular/compiler": "^20.3.9",
+  "@angular/core": "^20.3.9",
+  "@angular/forms": "^20.3.9",
+  "@angular/platform-browser": "^20.3.9",
+  "@angular/platform-browser-dynamic": "^20.3.9",
+  "@angular/animations": "20.3.9",
+  "@angular/router": "^20.3.9",
     "@fortawesome/angular-fontawesome": "^3.0.0",
     "@fortawesome/fontawesome-free": "^7.1.0",
     "@fortawesome/fontawesome-svg-core": "^7.1.0",
@@ -54,16 +56,16 @@
   "prettier": "^3.6.2",
   "rimraf": "^4.0.1",
   "glob": "^9.3.5",
-    "@angular/build": "^20.3.6",
-    "@angular/cli": "^20.3.6",
-    "@angular/compiler-cli": "^20.3.6",
-    "@types/jasmine": "~5.1.11",
-    "jasmine-core": "~5.12.0",
-    "karma": "~6.4.4",
-    "karma-chrome-launcher": "~3.2.0",
-    "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.1.0",
+    "@angular/build": "^20.3.8",
+    "@angular/cli": "^20.3.8",
+    "@angular/compiler-cli": "^20.3.9",
+    "@types/jest": "^30.0.0",
+    "eslint-plugin-jest": "^28.8.3",
+    "jest": "^30.2.0",
+    "jest-environment-jsdom": "^30.2.0",
+    "jest-preset-angular": "^15.0.3",
+    "jsdom": "^26.0.0",
+    "ts-jest": "^29.4.5",
     "typescript": "~5.9.2"
   }
   ,
