feat: add coverage reporting to tests and update .gitignore for coverage directory

--- a/backend/package.json
+++ b/backend/package.json
@@ -15,7 +15,7 @@
     "prisma:create-init": "prisma migrate reset && prisma migrate dev --name init",
     "prisma:init": "npm run prisma:generate && npm run prisma:migrate",
     "prisma:seed": "ts-node --project tsconfig.json prisma/seed.ts",
-    "test": "ts-node --project tsconfig.test.json test/budget-calculation.spec.ts"
+    "test": "c8 --reporter=text --reporter=lcov ts-node --project tsconfig.test.json test/budget-calculation.spec.ts"
   },
   "keywords": [],
   "author": "",
@@ -54,6 +54,7 @@
     "rimraf": "^5.0.10",
     "eslint": "^9.37.0",
     "eslint-config-prettier": "^10.1.8",
+    "c8": "^9.1.0",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.2.0",
