--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,7 @@
   "format:html": "prettier --write \"src/**/*.html\" && node tools/collapse-html-openings.js",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "jest --runInBand",
+    "test": "jest --runInBand --coverage",
     "test:watch": "jest --watch"
   },
   "prettier": {
