--- a/backend/package.json
+++ b/backend/package.json
@@ -59,5 +59,8 @@
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.9.3"
+  },
+  "volta": {
+    "node": "24.11.0"
   }
 }
