--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,7 +19,8 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 24
+          # Use Node 20 in CI to match prebuilt native binaries for some dependencies
+          node-version: 20
           cache: npm
           cache-dependency-path: backend/package-lock.json
 
@@ -52,7 +53,8 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 24
+          # Use Node 20 in CI to match prebuilt native binaries for some dependencies
+          node-version: 20
           cache: npm
           cache-dependency-path: frontend/package-lock.json
 
