--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,11 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Ensure lightningcss binary
+        # If lightningcss prebuilt binary is missing for the runner/Node combo,
+        # force rebuild/update the optional native binary so the Angular build can use it.
+        run: npm rebuild lightningcss --update-binary || true
+
       - name: Lint
         run: npm run lint
 
@@ -59,6 +64,10 @@ jobs:
 
       - name: Install dependencies
         run: npm ci
+
+      - name: Ensure lightningcss binary
+        # Rebuild lightningcss binary on linux runner
+        run: npm rebuild lightningcss --update-binary || true
 
       - name: Lint
         run: npm run lint
