--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,11 +63,7 @@ jobs:
           cache-dependency-path: frontend/package-lock.json
 
       - name: Install dependencies
-        run: npm ci
-
-      - name: Ensure lightningcss binary
-        # Rebuild lightningcss binary on linux runner
-        run: npm rebuild lightningcss --update-binary || true
+        run: npm install
 
       - name: Lint
         run: npm run lint
