feat: enhance frontend configuration with dynamic API base URL and entrypoint script

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,8 @@ NODE_ENV=production
 
 # Port interne exposé par l'API et l'application Angular.
 PORT=3000
+# Port HTTP exposé par le frontend Angular.
+FRONTEND_PORT=8080
 
 # Chaîne de connexion Prisma vers PostgreSQL (utilisée par le backend).
 DATABASE_URL=postgresql://postgres:postgres@db:5432/le-budget?schema=public
@@ -20,3 +22,6 @@ JWT_SECRET=change-me
 JWT_EXPIRES_IN=1h
 # Durée de validité des tokens de rafraîchissement.
 JWT_REFRESH_EXPIRES_IN=30d
+
+# URL du backend injectée dans le frontend au démarrage du conteneur.
+FRONTEND_API_BASE_URL=http://backend:3000
