--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -11,5 +11,11 @@ FROM nginx:1.27-alpine AS runtime
 
 COPY docker/frontend/default.conf /etc/nginx/conf.d/default.conf
 COPY --from=build /app/dist/le-budget/browser /usr/share/nginx/html
+RUN mkdir -p /etc/nginx/templates
+COPY docker/frontend/config.template.js /etc/nginx/templates/config.template.js
+COPY docker/frontend/entrypoint.sh /entrypoint.sh
+RUN chmod +x /entrypoint.sh
 
 EXPOSE 80
+ENTRYPOINT ["/entrypoint.sh"]
+CMD ["nginx", "-g", "daemon off;"]
