--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -1,6 +1,12 @@
 FROM node:24-slim AS builder
 WORKDIR /app
 
+# Ensure apt is noninteractive and install openssl and libssl for Prisma during build
+ENV DEBIAN_FRONTEND=noninteractive
+RUN apt-get update -y \
+	&& apt-get install -y --no-install-recommends openssl ca-certificates libssl1.1 libssl-dev \
+	&& rm -rf /var/lib/apt/lists/*
+
 # Install dependencies
 COPY backend/package*.json ./
 RUN npm ci
@@ -13,6 +19,12 @@ RUN npm run build
 FROM node:24-slim AS runtime
 WORKDIR /app
 ENV NODE_ENV=production
+
+# Install openssl runtime libraries so Prisma can detect libssl at runtime
+ENV DEBIAN_FRONTEND=noninteractive
+RUN apt-get update -y \
+	&& apt-get install -y --no-install-recommends openssl ca-certificates libssl1.1 \
+	&& rm -rf /var/lib/apt/lists/*
 
 # Reuse dependencies
 COPY --from=builder /app/package*.json ./
