--- a/backend/package.json
+++ b/backend/package.json
@@ -15,7 +15,7 @@
     "prisma:create-init": "prisma migrate reset && prisma migrate dev --name init",
     "prisma:init": "npm run prisma:generate && npm run prisma:migrate",
     "prisma:seed": "ts-node --project tsconfig.json prisma/seed.ts",
-    "test": "c8 --reporter=text --reporter=lcov ts-node --project tsconfig.test.json test/budget-calculation.spec.ts"
+    "test": "c8 --reporter=text --reporter=lcov ts-node --transpile-only --project tsconfig.test.json test/index.ts"
   },
   "keywords": [],
   "author": "",
