feat(date-picker): add default noop callbacks and improve internal value handling
feat(header): keep menus open on non-escape keydown

feat(input-amount): default display value when no input value set

test(accounts.store): add sorting tests for accounts by name and createdAt

feat(accounts.store): add applyAccountUpdate method for adding/updating accounts

feat(auth.store): ignore incomplete stored sessions during bootstrap

feat(budget.store): normalize month and category values when fields are missing

feat(categories.store): sort categories by name when sort order ties

fix(formatters): ensure toNumber handles string inputs correctly

test(events.service): trim trailing slashes from the base URL

test(transactions.store): swallow refresh account errors after update/create

chore: add decorators coverage test

chore: initialize package-lock.json for monorepo

--- a/backend/package.json
+++ b/backend/package.json
@@ -15,7 +15,7 @@
     "prisma:create-init": "prisma migrate reset && prisma migrate dev --name init",
     "prisma:init": "npm run prisma:generate && npm run prisma:migrate",
     "prisma:seed": "ts-node --project tsconfig.json prisma/seed.ts",
-    "test": "c8 --reporter=text --reporter=lcov ts-node --transpile-only --project tsconfig.test.json test/index.ts"
+    "test": "c8 --check-coverage --lines 100 --branches 100 --functions 100 --statements 100 --reporter=text --reporter=lcov ts-node --transpile-only --project tsconfig.test.json test/index.ts"
   },
   "keywords": [],
   "author": "",
